@@ -2,7 +2,7 @@ package com.tp.backend.service;
 
 import com.tp.backend.dto.asalto.*;
 import com.tp.backend.dto.sucursal.SucursalResponse;
-import com.tp.backend.dto.PersonaDetenida.PersonaDetenidaResponse;
+import com.tp.backend.dto.personaDetenida.PersonaDetenidaResponse;
 import com.tp.backend.exception.BadRequestException;
 import com.tp.backend.exception.NotFoundException;
 import com.tp.backend.model.Asalto;
@@ -36,9 +36,7 @@ public class AsaltoService {
     // ---------- CONSULTAS ----------
     @Transactional(readOnly = true)
     public List<AsaltoResponse> listarConFiltros(Long sucursalId, LocalDate fecha, LocalDate desde, LocalDate hasta) {
-
         validarFiltros(fecha, desde, hasta);
-
         List<Asalto> asaltos;
 
         if (sucursalId == null && fecha == null && desde == null) {
@@ -52,13 +50,13 @@ public class AsaltoService {
         } else {
             throw new BadRequestException("Para filtrar por fecha/rango se requiere sucursalId.");
         }
-
         return asaltos.stream().map(this::toResponse).toList();
     }
 
     @Transactional(readOnly = true)
     public List<AsaltoResponse> listarPorPersonaDetenida(Long personaDetenidaId) {
-        return asaltoRepository.findByPersonaDetenida_Id(personaDetenidaId)
+        // CORRECCIÓN: Usar el método plural del repositorio
+        return asaltoRepository.findByPersonas_Id(personaDetenidaId)
                 .stream()
                 .map(this::toResponse)
                 .toList();
@@ -79,14 +77,13 @@ public class AsaltoService {
         Sucursal sucursal = sucursalRepository.findById(req.getSucursalId())
                 .orElseThrow(() -> new NotFoundException("Sucursal no encontrada: " + req.getSucursalId()));
 
-        // Buscamos una LISTA de personas
+        // CORRECCIÓN: Usar getPersonaDetenidaIds() (plural) que viene del DTO
         List<PersonaDetenida> personas = personaDetenidaRepository.findAllById(req.getPersonaDetenidaIds());
         if (personas.isEmpty()) {
             throw new BadRequestException("Debe seleccionar al menos una persona válida.");
         }
 
         Asalto a = new Asalto();
-        a.setId(req.getId());
         a.setCodigo(req.getCodigo());
         a.setFechaAsalto(req.getFechaAsalto());
         a.setSucursal(sucursal);
@@ -105,12 +102,12 @@ public class AsaltoService {
         Sucursal sucursal = sucursalRepository.findById(req.getSucursalId())
                 .orElseThrow(() -> new NotFoundException("Sucursal no encontrada: " + req.getSucursalId()));
 
-        // Buscamos la nueva LISTA de personas
         List<PersonaDetenida> personas = personaDetenidaRepository.findAllById(req.getPersonaDetenidaIds());
         if (personas.isEmpty()) {
             throw new BadRequestException("Debe seleccionar al menos una persona válida.");
         }
 
+        a.setCodigo(req.getCodigo()); // Asegúrate de actualizar el código si es necesario
         a.setFechaAsalto(req.getFechaAsalto());
         a.setSucursal(sucursal);
         a.setPersonas(personas);
@@ -126,7 +123,7 @@ public class AsaltoService {
         asaltoRepository.deleteById(id);
     }
 
-    // ---------- helpers ----------
+    // ---------- HELPERS ----------
     private void validarFiltros(LocalDate fecha, LocalDate desde, LocalDate hasta) {
         if (fecha != null && (desde != null || hasta != null)) {
             throw new BadRequestException("No se puede usar 'fecha' junto con 'desde/hasta'.");
@@ -143,7 +140,10 @@ public class AsaltoService {
         if (req == null) throw new BadRequestException("Body requerido.");
         if (req.getFechaAsalto() == null) throw new BadRequestException("fechaAsalto es obligatoria.");
         if (req.getSucursalId() == null) throw new BadRequestException("sucursalId es obligatorio.");
-        if (req.getPersonaDetenidaId() == null) throw new BadRequestException("personaDetenidaId es obligatorio.");
+        // CORRECCIÓN: Validar el campo plural
+        if (req.getPersonaDetenidaIds() == null || req.getPersonaDetenidaIds().isEmpty()) {
+            throw new BadRequestException("Debe seleccionar al menos un detenido.");
+        }
     }
 
     private AsaltoResponse toResponse(Asalto a) {
@@ -152,21 +152,35 @@ public class AsaltoService {
         r.setCodigo(a.getCodigo());
         r.setFechaAsalto(a.getFechaAsalto());
 
+        // 1. Mapeo de Sucursal
+        if (a.getSucursal() != null) {
+            Sucursal s = a.getSucursal();
+            r.setSucursal(new SucursalResponse(
+                    s.getId(),
+                    s.getCodigo(),
+                    s.getDomicilio(),
+                    s.getNroEmpleados(),
+                    s.getBanco() != null ? s.getBanco().getId() : null,
+                    s.getBanco() != null ? s.getBanco().getCodigo() : null
+            ));
+        }
 
-        //Mapeamos la lista de personas al response
+        // 2. Mapeo de Personas
         if (a.getPersonas() != null) {
-            r.setPersonas(a.getPersonas().stream().map(p -> {
-                PersonaDetenidaResponse pr = new PersonaDetenidaResponse();
-                pr.setId(p.getId());
-                pr.setCodigo(p.getCodigo());
-                pr.setNombre(p.getNombre());
-                pr.setApellido(p.getApellido());
-                return pr;
-            }).collect(Collectors.toList()));
+            List<PersonaDetenidaResponse> listaPersonaDTO = a.getPersonas().stream()
+                    .map(p -> new PersonaDetenidaResponse(
+                            p.getId(),
+                            p.getCodigo(),
+                            p.getNombre(),
+                            p.getApellido(),
+                            null, // Banda (le pasamos null para no complicar el mapeo aquí)
+                            null  // Asaltos (le pasamos null para evitar el bucle infinito)
+                    ))
+                    .toList();
+
+            r.setPersonas(listaPersonaDTO);
         }
 
         return r;
-
     }
-
 }
